fixed overflow issue with grid

--- a/src/stylesheets/dashboard.css
+++ b/src/stylesheets/dashboard.css
@@ -19,8 +19,8 @@ main {
   padding: 20px;
   width: 45%;
   min-height: 350px;
-  display: grid;
-  grid-template-rows: 20px 50px 1fr 50px;
+  /* display: grid;
+  grid-template-rows: 20px 50px 1fr 50px; */
   border-radius: 10px;
   box-shadow: 0px 6px 10px rgb(0 0 0 / 25%);
   box-sizing: border-box;
@@ -35,7 +35,7 @@ main {
 
 .card-container.bottom {
   width: 93%;
-  min-height: 70px;
+  min-height: fit-content;
 }
 
 .card-container-line-chart {
